--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -261,3 +261,56 @@ a {
     font-size: 24px;
   }
 }
+
+.admin-dashboard {
+  display: flex;
+  height: 100vh;
+  overflow-y: hidden;
+}
+.admin-sidebar {
+  background-color: $bg-color;
+  height: 100%;
+  width: 15%;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  h3 {
+    margin: 10px 10px 20px 10px;
+  }
+  a {
+    margin: 10px;
+    color: $text-primary;
+    &:hover {
+      color: $text-tertiary;
+    }
+  }
+}
+
+.add-item-view {
+  padding: 30px 60px;
+  overflow-y: auto;
+  width: 75%;
+
+  form {
+    display: grid;
+  }
+  input {
+    margin-bottom: 20px;
+    width: 80%;
+    padding: 5px 20px;
+    font-size: 18px;
+    &:focus {
+      outline: 2px solid $primary-color;
+    }
+  }
+  textarea {
+    margin-bottom: 20px;
+    width: 80%;
+    padding: 5px 20px;
+    font-size: 18px;
+
+    &:focus {
+      outline: 2px solid $primary-color;
+    }
+  }
+}
