Update User Info, Checkout Order, Add Photo, Hosting

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -314,3 +314,34 @@ a {
     }
   }
 }
+
+.user-list-page {
+  width: 85%;
+  padding: 0 2% 0 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.user-list-heading {
+  text-align: center;
+}
+.usersList {
+  padding: 0 20px 0 20px;
+  margin-bottom: 10px;
+}
+.usernames {
+  display: flex;
+  width: fit-content;
+}
+.username {
+  width: 15em;
+  font-weight: bold;
+}
+.user-email {
+  width: 20em;
+}
+.user-line {
+  background-color: black;
+  border: 1px solid black;
+  width: 80%;
+}
