--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-size: 18px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   color: #232323;
 }
 
@@ -14,8 +14,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 button {
@@ -27,11 +27,11 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 30px 60px;
 }
 
@@ -61,11 +61,11 @@ nav .nav-btn {
   display: -ms-grid;
   display: grid;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   justify-items: center;
   -ms-grid-columns: 4fr 5fr 2fr;
-      grid-template-columns: 4fr 5fr 2fr;
+  grid-template-columns: 4fr 5fr 2fr;
 }
 
 .item-con a {
@@ -125,15 +125,15 @@ nav .nav-btn {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   border-radius: 5px;
   background-color: #ffffff;
   -webkit-box-shadow: 2px 4px 16px -3px rgba(0, 0, 0, 0.12);
-          box-shadow: 2px 4px 16px -3px rgba(0, 0, 0, 0.12);
+  box-shadow: 2px 4px 16px -3px rgba(0, 0, 0, 0.12);
 }
 
 .amount-con button {
@@ -197,10 +197,10 @@ a {
 .catalog-grid {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-columns: (1fr) [4];
+  grid-template-columns: repeat(4, 1fr);
   -webkit-column-gap: 20px;
-          column-gap: 20px;
+  column-gap: 20px;
   padding: 10px 60px;
 }
 
@@ -229,7 +229,7 @@ a {
   width: 100%;
   max-height: 200px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-bottom: 1px solid #232323;
 }
 
@@ -237,7 +237,7 @@ a {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 7fr 3fr;
-      grid-template-columns: 7fr 3fr;
+  grid-template-columns: 7fr 3fr;
   height: 100vh;
 }
 
@@ -258,11 +258,11 @@ a {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .order-summary-item {
@@ -270,11 +270,11 @@ a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .order-summary-desc p:nth-child(1) {
@@ -289,11 +289,11 @@ a {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 2fr 4fr 2fr 1fr;
-      grid-template-columns: 2fr 4fr 2fr 1fr;
+  grid-template-columns: 2fr 4fr 2fr 1fr;
   margin: 0 0 20px 0;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .cart-item-img {
@@ -307,8 +307,8 @@ a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin: 0 60px;
 }
 
@@ -356,8 +356,8 @@ a {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   padding: 30px;
 }
 
@@ -407,33 +407,51 @@ a {
   outline: 2px solid #9377e2;
 }
 
-.user-list-page{
-  width: 90%;
+.user-list-page {
+  width: 85%;
   padding: 0 2% 0 2%;
-
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
+
 .user-list-heading {
   text-align: center;
 }
+
 .usersList {
   padding: 0 20px 0 20px;
   margin-bottom: 10px;
 }
+
 .usernames {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
 }
+
 .username {
   width: 15em;
   font-weight: bold;
 }
+
 .user-email {
   width: 20em;
 }
+
 .user-line {
   background-color: black;
   border: 1px solid black;
   width: 80%;
 }
-
 /*# sourceMappingURL=style.css.map */
