--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -321,6 +321,10 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  a {
+    align-self: center;
+  }
 }
 .user-list-heading {
   text-align: center;
@@ -346,11 +350,33 @@ a {
   width: 80%;
 }
 
+.edit-user {
+  margin-left: 10px;
+  width: 100%;
+}
+
+.edit-user > h2 {
+  text-align: center;
+}
+
+.edit-user-form > select {
+  width: 25%;
+}
+
 .edit-user-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
 .edit-user-input {
-  background-color: red;
+  background-color: white;
+  border: none;
+  border-bottom: 2px solid black;
+  margin-bottom: 10px;
+  width: 25%;
 }
