Fixed spelling error

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-size: 18px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   color: #232323;
 }
 
@@ -14,8 +14,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 button {
@@ -27,11 +27,11 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 30px 60px;
 }
 
@@ -61,11 +61,11 @@ nav .nav-btn {
   display: -ms-grid;
   display: grid;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   justify-items: center;
   -ms-grid-columns: 4fr 5fr 2fr;
-      grid-template-columns: 4fr 5fr 2fr;
+  grid-template-columns: 4fr 5fr 2fr;
 }
 
 .item-con a {
@@ -125,15 +125,15 @@ nav .nav-btn {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   border-radius: 5px;
   background-color: #ffffff;
   -webkit-box-shadow: 2px 4px 16px -3px rgba(0, 0, 0, 0.12);
-          box-shadow: 2px 4px 16px -3px rgba(0, 0, 0, 0.12);
+  box-shadow: 2px 4px 16px -3px rgba(0, 0, 0, 0.12);
 }
 
 .amount-con button {
@@ -157,7 +157,7 @@ nav .nav-btn {
 }
 
 .product-con {
-  background-image: url("../styles/res/blue-spiral.png");
+  background-image: url('../styles/res/blue-spiral.png');
   background-color: #9377e2;
   background-position: center;
   background-size: cover;
@@ -167,11 +167,11 @@ nav .nav-btn {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   border-radius: 50%;
 }
 
@@ -179,7 +179,7 @@ nav .nav-btn {
   height: 350px;
   width: 350px;
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
 }
 
 .other-product {
@@ -192,17 +192,17 @@ nav .nav-btn {
 }
 
 .bg1 {
-  background-image: url("../styles/res/purple-spiral.png");
+  background-image: url('../styles/res/purple-spiral.png');
   background-color: #9377e2;
 }
 
 .bg2 {
-  background-image: url("../styles/res/pink-spiral.png");
+  background-image: url('../styles/res/pink-spiral.png');
   background-color: #9377e2;
 }
 
 .bg3 {
-  background-image: url("../styles/res/yellow-spiral.png");
+  background-image: url('../styles/res/yellow-spiral.png');
   background-color: #9377e2;
 }
 
@@ -213,10 +213,10 @@ a {
 .catalog-grid {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-columns: (1fr) [4];
+  grid-template-columns: repeat(4, 1fr);
   -webkit-column-gap: 20px;
-          column-gap: 20px;
+  column-gap: 20px;
   padding: 10px 60px;
 }
 
@@ -245,7 +245,7 @@ a {
   width: 100%;
   max-height: 200px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-bottom: 1px solid #232323;
 }
 
@@ -253,7 +253,7 @@ a {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 7fr 3fr;
-      grid-template-columns: 7fr 3fr;
+  grid-template-columns: 7fr 3fr;
   height: 100vh;
 }
 
@@ -274,11 +274,11 @@ a {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .order-summary-item {
@@ -286,11 +286,11 @@ a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .order-summary-desc p:nth-child(1) {
@@ -305,11 +305,11 @@ a {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 2fr 4fr 2fr 1fr;
-      grid-template-columns: 2fr 4fr 2fr 1fr;
+  grid-template-columns: 2fr 4fr 2fr 1fr;
   margin: 0 0 20px 0;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .cart-item-img {
@@ -323,8 +323,8 @@ a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin: 0 60px;
 }
 
@@ -372,8 +372,8 @@ a {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   padding: 30px;
 }
 
@@ -431,17 +431,17 @@ a {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .user-list-page a {
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -ms-grid-row-align: center;
+  align-self: center;
   color: #9377e2;
 }
 
@@ -501,13 +501,8 @@ a {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-<<<<<<< HEAD
-      -ms-flex-direction: column;
-          flex-direction: column;
-=======
   -ms-flex-direction: column;
   flex-direction: column;
->>>>>>> e1be4698151c3929a8af7360978efbcd3893fbaf
 }
 
 .edit-user-input {
@@ -522,13 +517,13 @@ a {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 2fr 3fr 2fr 1fr;
-      grid-template-columns: 2fr 3fr 2fr 1fr;
+  grid-template-columns: 2fr 3fr 2fr 1fr;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .order-items a {
