--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -445,6 +445,9 @@ a {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .usernames a {
@@ -468,7 +471,8 @@ a {
 
 .edit-user {
   margin-left: 10px;
-  width: 100%;
+  width: 75%;
+  overflow-y: auto;
 }
 
 .edit-user > h1 {
@@ -476,7 +480,10 @@ a {
 }
 
 .edit-user-form > select {
-  width: 25%;
+  width: 50%;
+  font-size: 18px;
+  padding: 5px 10px 5px 20px;
+  margin-bottom: 30px;
 }
 
 .edit-user-form {
@@ -493,8 +500,10 @@ a {
   background-color: white;
   border: none;
   border-bottom: 2px solid black;
-  margin-bottom: 10px;
-  width: 25%;
+  margin-bottom: 30px;
+  width: 50%;
+  font-size: 18px;
+  padding: 5px 10px 5px 20px;
 }
 
 .order-items {
