Added View Orders

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -395,7 +395,9 @@ a {
   border: none;
   border-bottom: 2px solid black;
   margin-bottom: 10px;
-  width: 25%;
+  font-size: 18px;
+  padding: 5px 10px 5px 20px;
+  width: 50%;
 }
 
 .order-items {
@@ -411,4 +413,12 @@ a {
 
 .order-status {
   color: rgb(63, 55, 55);
+}
+
+.order-view-cart {
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr;
+  grid-template-rows: auto;
+  align-items: center;
+  grid-column-gap: 100px;
 }
