--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -517,7 +517,9 @@ a {
   border: none;
   border-bottom: 2px solid black;
   margin-bottom: 10px;
-  width: 25%;
+  font-size: 18px;
+  padding: 5px 10px 5px 20px;
+  width: 50%;
 }
 
 .order-items {
@@ -539,5 +541,18 @@ a {
 
 .order-status {
   color: #3f3737;
+}
+
+.order-view-cart {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 3fr 1fr 1fr;
+      grid-template-columns: 3fr 1fr 1fr;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  grid-column-gap: 100px;
 }
 /*# sourceMappingURL=style.css.map */
