--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -20,8 +20,9 @@ button {
   font-family: 'Poppins', sans-serif;
 }
 nav {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 3fr 7fr;
+  //justify-content: space-between;
   align-items: center;
   padding: 30px 60px;
 
@@ -29,6 +30,7 @@ nav {
     color: $text-primary;
     font-size: 16px;
     font-weight: 700;
+    display: inline-block;
   }
 
   .nav-btn {
@@ -41,7 +43,18 @@ nav {
     cursor: pointer;
     font-size: 16px;
     font-weight: 700;
+    display: inline-block;
   }
+}
+
+.nav-bar-items {
+  display: flex;
+  align-items: center;
+  align-self: end;
+}
+.nav-bar-item {
+  display: flex;
+  align-items: center;
 }
 
 .item-con {
@@ -421,4 +434,51 @@ a {
   grid-template-rows: auto;
   align-items: center;
   grid-column-gap: 100px;
+}
+
+.order-summary {
+  margin: 50px;
+  margin-top: 0;
+  width: 75%;
+  overflow-y: auto;
+
+  h1 {
+    text-align: center;
+  }
+
+  select {
+    width: 25%;
+    font-size: 18px;
+    padding: 5px 10px 5px 20px;
+    margin-bottom: 30px;
+  }
+}
+
+.order-view-cart:nth-child(odd) {
+  background-color: rgba($color: #9377e2, $alpha: 0.6);
+}
+
+.h4-cart-summary {
+  padding-left: 20px;
+}
+
+.order-view-total {
+  grid-column: 3;
+}
+
+.order-view-t {
+  grid-column: 1;
+  padding-left: 20px;
+}
+
+.customer-order {
+  margin: 30px 7%;
+  padding: 30px;
+  background-color: #fffff2;
+  border-radius: 40px;
+  box-shadow: 2px 0 10px black;
+}
+
+.order-view-name {
+  text-align: center;
 }
