--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -341,6 +341,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-y: auto;
 
   a {
     align-self: center;
@@ -374,6 +375,10 @@ a {
   background-color: black;
   border: 1px solid black;
   width: 80%;
+}
+
+.user-order-status {
+  padding-right: 20px;
 }
 
 .edit-user {
@@ -486,25 +491,51 @@ a {
 .dashboard-items {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  row-gap: 150px;
-  column-gap: 60px;
+  row-gap: 70px;
+  column-gap: 30px;
 }
 
 .dashboard-card {
-  border-radius: 15px;
+  border-radius: 7px;
   padding: 10px;
-  background-color: $primary-color;
-  color: $text-secondary;
-  box-shadow: 5px 10px 8px rgba($color: #888, $alpha: 0.2);
+  color: $primary-color;
+  border: 2px solid $primary-color;
+  box-shadow: 5px 10px 8px rgba($color: #888, $alpha: 0.1);
   text-align: center;
-  min-width: 200px;
+  min-width: 100px;
 
   p {
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: bolder;
     margin: 0;
   }
   h4 {
     margin-bottom: 15px;
   }
+}
+
+.dashboard-card:hover {
+  background-color: #9377e2;
+  color: #fff;
+}
+
+.dashboard-title {
+  margin-bottom: 80px;
+}
+
+.products-view-page {
+  width: 75%;
+  padding: 30px;
+}
+
+.products-view {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 50px;
+  margin-bottom: 30px;
+}
+.product-btns {
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
 }
