--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,21 @@
+/* width */
+::-webkit-scrollbar {
+  width: 0.45rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px grey;
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #9377e2;
+  border-radius: 10px;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   padding: 0;
@@ -23,10 +41,12 @@ button {
 }
 
 nav {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 3fr 7fr;
-      grid-template-columns: 3fr 7fr;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -40,7 +60,7 @@ nav a {
   display: inline-block;
 }
 
-nav .nav-btn {
+.nav-btn {
   margin-left: 20px;
   background-color: #9377e2;
   color: #ffffff;
@@ -50,7 +70,31 @@ nav .nav-btn {
   cursor: pointer;
   font-size: 16px;
   font-weight: 700;
-  display: inline-block;
+  display: inline;
+  text-align: center;
+}
+
+.cart-btn {
+  margin-left: 20px;
+  background-color: #9377e2;
+  color: #ffffff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 700;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  position: relative;
 }
 
 .nav-bar-items {
@@ -105,6 +149,16 @@ nav .nav-btn {
   margin: 5px 0;
   font-family: 'Nunito', sans-serif;
   font-weight: 700;
+}
+
+.item-con h3 {
+  font-size: 24px;
+  margin: 5px 0;
+  font-weight: 700;
+}
+
+.flavour-con {
+  margin: 5px 0;
 }
 
 .btn {
@@ -235,13 +289,13 @@ a {
   display: grid;
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
-  -webkit-column-gap: 20px;
-          column-gap: 20px;
+  gap: 20px;
   padding: 10px 60px;
 }
 
 .catalog-item {
-  width: 300px;
+  width: 290px;
+  height: 100%;
   border: 1px solid #232323;
   padding-bottom: 10px;
   cursor: pointer;
@@ -250,6 +304,7 @@ a {
 .catalog-item h3 {
   padding-left: 20px;
   margin: 5px 0;
+  font-size: 20px;
   color: #9377e2;
   text-decoration: none;
 }
@@ -261,12 +316,30 @@ a {
   text-decoration: none;
 }
 
-.catalog-item-img {
-  width: 100%;
-  max-height: 200px;
+.catalog-item-img-con {
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -o-object-fit: cover;
      object-fit: cover;
+  background-color: #9377e2;
+  background-position: center;
+  background-size: cover;
   border-bottom: 1px solid #232323;
+}
+
+.catalog-item-img {
+  width: 80%;
+  height: 175px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .cart-con {
@@ -332,10 +405,29 @@ a {
           align-items: center;
 }
 
-.cart-item-img {
+.cart-img-con {
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #9377e2;
+  background-position: center;
+  background-size: cover;
+}
+
+.cart-item-img {
+  width: 100px;
+  height: 100px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .cart-amount-con {
@@ -577,9 +669,9 @@ a {
 }
 
 .order-summary {
-  margin: 50px;
+  padding: 50px;
   margin-top: 0;
-  width: 75%;
+  width: 85%;
   overflow-y: auto;
 }
 
@@ -624,5 +716,65 @@ a {
 
 .order-view-name {
   text-align: center;
+}
+
+.checkout-con {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 4fr 6fr;
+      grid-template-columns: 4fr 6fr;
+  padding: 0 60px;
+}
+
+.checkout-con input {
+  border: none;
+  padding: 7px 40px 7px 20px;
+  margin: 5px 30px 15px 0;
+  border-radius: 5px;
+  background-color: #f8f5ff;
+  font-size: 18px;
+}
+
+.checkout-con input:focus {
+  outline: none;
+  border: 2px solid #9377e2;
+}
+
+.checkout-con select {
+  border: none;
+  padding: 7px 160px 7px 20px;
+  margin: 5px 30px 15px 0;
+  border-radius: 5px;
+  background-color: #f8f5ff;
+  font-size: 18px;
+}
+
+.checkout-con select:focus {
+  outline: none;
+  border: 2px solid #9377e2;
+}
+
+.checkout-con .btn {
+  background-color: #9377e2;
+  color: white;
+  padding: 15px 30px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.checkout-gif-con {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.checkout-summary {
+  height: 200px;
+  padding-right: 10px;
+  overflow-y: auto;
 }
 /*# sourceMappingURL=style.css.map */
