--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -4,6 +4,23 @@ $text-tertiary: #9377e2;
 $bg-color: #f8f5ff;
 $primary-color: #9377e2;
 
+/* width */
+::-webkit-scrollbar {
+  width: 0.45rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px grey;
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $primary-color;
+  border-radius: 10px;
+}
 body {
   font-family: 'Poppins', sans-serif;
   padding: 0;
@@ -20,9 +37,9 @@ button {
   font-family: 'Poppins', sans-serif;
 }
 nav {
-  display: grid;
-  grid-template-columns: 3fr 7fr;
-  //justify-content: space-between;
+  display: flex;
+  // grid-template-columns: 3fr 7fr;
+  justify-content: space-between;
   align-items: center;
   padding: 30px 60px;
 
@@ -32,21 +49,36 @@ nav {
     font-weight: 700;
     display: inline-block;
   }
-
-  .nav-btn {
-    margin-left: 20px;
-    background-color: $primary-color;
-    color: $text-secondary;
-    padding: 10px 20px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 700;
-    display: inline-block;
-  }
 }
-
+.nav-btn {
+  margin-left: 20px;
+  background-color: $primary-color;
+  color: $text-secondary;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 700;
+  display: inline;
+  text-align: center;
+}
+.cart-btn {
+  margin-left: 20px;
+  background-color: $primary-color;
+  color: $text-secondary;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+}
 .nav-bar-items {
   display: flex;
   align-items: center;
@@ -83,6 +115,14 @@ nav {
     font-family: 'Nunito', sans-serif;
     font-weight: 700;
   }
+  h3 {
+    font-size: 24px;
+    margin: 5px 0;
+    font-weight: 700;
+  }
+}
+.flavour-con {
+  margin: 5px 0;
 }
 .btn {
   background-color: $primary-color;
@@ -180,17 +220,19 @@ a {
 .catalog-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  column-gap: 20px;
+  gap: 20px;
   padding: 10px 60px;
 }
 .catalog-item {
-  width: 300px;
+  width: 290px;
+  height: 100%;
   border: 1px solid $text-primary;
   padding-bottom: 10px;
   cursor: pointer;
   h3 {
     padding-left: 20px;
     margin: 5px 0;
+    font-size: 20px;
     color: $text-tertiary;
     text-decoration: none;
   }
@@ -202,11 +244,21 @@ a {
   }
 }
 
-.catalog-item-img {
-  width: 100%;
-  max-height: 200px;
+.catalog-item-img-con {
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   object-fit: cover;
+  background-color: #9377e2;
+  background-position: center;
+  background-size: cover;
   border-bottom: 1px solid $text-primary;
+}
+.catalog-item-img {
+  width: 80%;
+  height: 175px;
+  object-fit: contain;
 }
 .cart-con {
   display: grid;
@@ -246,11 +298,21 @@ a {
   margin: 0 0 20px 0;
   align-items: center;
 }
-
-.cart-item-img {
+.cart-img-con {
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #9377e2;
+  background-position: center;
+  background-size: cover;
+}
+.cart-item-img {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
 }
 .cart-amount-con {
   display: flex;
@@ -437,9 +499,9 @@ a {
 }
 
 .order-summary {
-  margin: 50px;
+  padding: 50px;
   margin-top: 0;
-  width: 75%;
+  width: 85%;
   overflow-y: auto;
 
   h1 {
@@ -481,4 +543,57 @@ a {
 
 .order-view-name {
   text-align: center;
+}
+
+.checkout-con {
+  display: grid;
+  grid-template-columns: 4fr 6fr;
+  padding: 0 60px;
+
+  input {
+    border: none;
+    padding: 7px 40px 7px 20px;
+    margin: 5px 30px 15px 0;
+    border-radius: 5px;
+    background-color: $bg-color;
+    font-size: 18px;
+    &:focus {
+      outline: none;
+      border: 2px solid $text-tertiary;
+    }
+  }
+  select {
+    border: none;
+    padding: 7px 160px 7px 20px;
+    margin: 5px 30px 15px 0;
+    border-radius: 5px;
+    background-color: $bg-color;
+    font-size: 18px;
+    &:focus {
+      outline: none;
+      border: 2px solid $text-tertiary;
+    }
+  }
+  .btn {
+    background-color: $primary-color;
+    color: white;
+    padding: 15px 30px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 700;
+  }
+}
+.checkout-gif-con {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.checkout-summary {
+  height: 200px;
+  padding-right: 10px;
+  overflow-y: auto;
 }
