--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -713,10 +713,8 @@ a {
 .customer-order {
   margin: 30px 7%;
   padding: 30px;
-  background-color: #fffff2;
-  border-radius: 40px;
-  -webkit-box-shadow: 2px 0 10px black;
-          box-shadow: 2px 0 10px black;
+  border-radius: 5px;
+  border: 2px solid #9377e2;
 }
 
 .order-view-name {
